@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>629</height>
+    <width>612</width>
+    <height>643</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
@@ -325,19 +325,15 @@ It's time the desktop caught up with us.</string>
                          </property>
                         </widget>
                        </item>
-                       <item row="0" column="1">
-                        <widget class="KRestrictedLine" name="projectName">
-                         <property name="validChars">
-                          <string>^[\\w-\\.]+$</string>
-                         </property>
-                        </widget>
-                       </item>
                        <item row="1" column="0" colspan="2">
                         <widget class="KPushButton" name="newProjectButton">
                          <property name="text">
                           <string>Create!</string>
                          </property>
                         </widget>
+                       </item>
+                       <item row="0" column="1">
+                        <widget class="KRestrictedLine" name="projectName"/>
                        </item>
                       </layout>
                      </item>
